--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ dependencies = [
     "pytest-dotenv>=0.5.2",
     "python-multipart>=0.0.20",
     "redis>=6.4.0",
+    "ruff>=0.12.12",
     "sqlalchemy>=2.0.43",
     "uvicorn>=0.35.0",
 ]
